5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4139/executions/1675_2471.log
== TEST (2019-04-26 20:18:13) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i>0)and(imc>0)
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Medio")
else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 6
    if(i>0)and(imc>0)
                    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:19:34) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Medio")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:19:59) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Medio")
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.141656
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:21:16) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.199201
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Baixo
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Medio
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:21:24) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:22:02) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:22:17) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:23:29) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:24:06) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:25:30) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:26:31) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco Alto")
else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:28:57) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22,0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22,0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:28) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(imc<22.0(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- ERROR:
File "XXXX", line 10
    elif(imc<22.0(i>=45):
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:39) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:50) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:31:59) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 20:32:07) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 20:32:17) 
-- CODE:
i = int(input("idade:"))
imc = float(input("digite IMC:"))

print("Entradas:",i,"anos e IMC",imc)

if(i > 0)and(imc > 0):
	if(imc<22.0):
		if(i<45):
			print("Risco: Baixo")
		elif(i>=45):
			print("Risco: Medio")
	elif(imc>=22.0):
		if(i<45):
			print("Risco: Medio")
		elif(i>=45):
			print("Risco: Alto")

else:
	print("Dados invalidos")

-- EXECUTION TIME:
0.132866
-- TEST CASE 1:
---- input:
0
0
---- correct output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
---- user output:
Entradas: 0 anos e IMC 0.0
Dados invalidos
-- TEST CASE 2:
---- input:
25
25
---- correct output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
---- user output:
Entradas: 25 anos e IMC 25.0
Risco: Medio
-- TEST CASE 3:
---- input:
50
25
---- correct output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
---- user output:
Entradas: 50 anos e IMC 25.0
Risco: Alto
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
